# py_cli_template

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: run_tests.yaml
pycli/: cli.py
tests/: test_placeholder.py
